Input field cutting off fix.

--- a/src/css/defaults/interaction.scss
+++ b/src/css/defaults/interaction.scss
@@ -269,7 +269,7 @@ select[multiple=multiple] {
   transition: border-color;
   background-color: $color-input-bkgd;
   color: inherit;
-  padding: .5em .75em;
+  padding: .5em 0 .5em .75em;
   border-radius: 4px;
   border: 1px solid $grey-light;
   margin-bottom: .5em;
@@ -278,6 +278,10 @@ select[multiple=multiple] {
   font-weight: 700;
   transition: all 250ms $easing-quick;
   -webkit-appearance: none;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 textarea:hover,
